recipes-custom/custom-iptables-rules/files/rules.v4
# Generated by iptables-save v1.4.21 on Sat May  6 16:47:28 2017
*filter
:INPUT DROP [1:162]
:FORWARD DROP [0:0]
#default output is ACCEPT... could be better
:OUTPUT ACCEPT [0:0]

#enable ssh from local only and allow outgoing ssh
-A INPUT -s 192.168.1.0/24 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT


-A INPUT -p tcp -m multiport --dports 80,8443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --sports 80,8443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,8443 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# mosh
-A INPUT -p udp -m multiport --dports 60000:61000 -j ACCEPT

# enable DNS
-A OUTPUT -p udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT  -p udp --sport 53 -m state --state ESTABLISHED     -j ACCEPT
-A OUTPUT -p tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT  -p tcp --sport 53 -m state --state ESTABLISHED     -j ACCEPT

# enable access to mqtt broker
-A OUTPUT -p tcp --dport 15543 -m state --state NEW,ESTABLISHED -j ACCEPT

# enable input related to output traffic
-I INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

COMMIT
# Completed on Sat May  6 16:47:28 2017
